# react-native-geckoview

./: .gitignore  .npmignore  App.js  LICENSE  README.md  index.tsx  package.json  react-native.config.js
.github/workflows/: e2e-android.yml
android/: README.md  build.gradle  gradle.properties  sentry.properties
android/app/: BUCK  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/art/dart/tv/: MainApplication.java
android/src/main/java/cn/reactnative/: GeckoViewManager.java
android/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/src/main/kotlin/com/reactnative/geckoview/: ContentBlockingController.kt  GeckoRuntimeManager.kt  GeckoSessionManager.kt  GeckoViewContentDelegate.kt  GeckoViewManagerImpl.kt  GeckoViewModule.kt  GeckoViewNavigationDelegate.kt  GeckoViewPackage.kt  GeckoViewPermissionDelegate.kt  GeckoViewProgressDelegate.kt  GeckoViewPromptDelegate.kt  MediaDelegate.kt  PromptWrappers.kt  WebExtensionController.kt
android/src/newarch/kotlin/com/reactnative/geckoview/: GeckoViewManager.kt
android/src/paper/kotlin/com/reactnative/geckoview/: GeckoViewManager.kt
android/src/test/kotlin/com/reactnative/geckoview/: ContentBlockingControllerTest.kt  CookieBannerTest.kt  GeckoRuntimeManagerTest.kt  GeckoSessionManagerTest.kt  GeckoViewContentDelegateTest.kt  GeckoViewManagerImplTest.kt  GeckoViewNavigationDelegateTest.kt  GeckoViewPermissionDelegateTest.kt  GeckoViewProgressDelegateTest.kt  GeckoViewPromptDelegateTest.kt  MediaDelegateTest.kt  TestHelpers.kt  WebExtensionTest.kt
dart-tv-gecko/: App.js  app.json  eas.json  package.json
dart-tv-gecko/android/: build.gradle  gradle.properties  settings.gradle
dart-tv-gecko/android/app/: build.gradle
dart-tv-gecko/android/app/src/debug/: AndroidManifest.xml
dart-tv-gecko/android/app/src/main/: AndroidManifest.xml
dart-tv-gecko/android/app/src/main/res/values/: strings.xml
dart-tv-gecko/android/app/src/main/res/xml/: automotive_app_desc.xml
docs/: ADVANCED.md  DEBUGGING.md  FABRIC.md  MEMORY_PROFILING.md  TESTING.md
example/: .detoxrc.js  .gitignore  App.tsx  metro.config.js  package.json  setup.ts  tsconfig.json
example/__tests__/: App-test.tsx  AudioFocus-test.tsx  ContentBlocking-test.tsx  CookieBanner-test.tsx  ErrorDelegate-test.tsx  FabricHardening-test.tsx  FabricRegistry-test.ts  GeckoView-test.tsx  GeckoViewAdvanced-test.tsx  History-test.tsx  JavaScript-test.tsx  MemoryLeak-test.tsx  Popup-test.tsx  SessionManagement-test.tsx  Settings-test.tsx  Snapshot-test.tsx  WebExtension-test.tsx  testUtils.ts
example/android/: build.gradle  gradle.properties  settings.gradle
example/android/app/: BUCK  build.gradle  debug.keystore
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/res/values/: strings.xml
example/e2e/: jest.config.js  navigation.test.ts  progress.test.ts  security.test.ts  theme.test.ts  tsconfig.json  userAgent.test.ts
scripts/: verify-fabric-build.sh
src/: GeckoViewNativeComponent.ts  fabricDetection.ts  types.ts
(+5 files in other folders)
